--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </style>
 </head>
 <body>
-    <form  action ="https://kamalwshwaran.github.io/Badboy/">
+    <form  action ="https://kamaleshwaran-badboy.github.io/Badboy/">
     
         <input type="username" placeholder="Enter your name" >
     <br>
